update text on front page

--- a/_includes/01_visualizations.html
+++ b/_includes/01_visualizations.html
@@ -29,17 +29,7 @@ gsheet</a></div>
             It takes on three values (<font color="#AC3931">3: High</font>, <font color="#D3787D">2: Medium</font>, <font
                     color="#6E8E96">1: Low</font>), indicating the severity of the covid-19 outbreak for a hospital on a certain
             day. It is calculated in three steps (more details <a
-                    href="https://yu-group.github.io/covid19-severity-prediction/results/hospital_index_animated.html">here</a>):
-            <br>
-        </p>
-        <p align="left" style="font-size: 12pt; margin-left: 5%;">
-            1. county-level predictions for number of deaths are modeled<br>
-            2. county-level predictions are allocated to hospitals within counties proportional the their total number of
-            employees<br>
-            3. final value is decided by thresholding the mean of two numbers: (i) percentile of cumulative deaths so far (ii)
-            percentile of predicted new deaths in the next few days<br>
-
-            <br>
+                    href="https://yu-group.github.io/covid19-severity-prediction/results/hospital_index_animated.html">here</a> and <a href="https://docs.google.com/spreadsheets/d/1ZLev2pRIPXvP-qNnvAtO53-bCrAGTAhB_w0w7bZKAWw/edit#gid=582592389">here</a>.)
         </p>
     </div>
 </div>
