Update links to paper

--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -53,7 +53,7 @@
                             <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;"
                                href="https://github.com/Yu-Group/covid19-severity-prediction/">Github</a>
                             <a type="button" class="btn btn-success" style="margin-bottom: 30px; margin-right: 10px;"
-                               href="https://arxiv.org/abs/2005.07882">arXiv paper</a>
+                               href="https://hdsr.mitpress.mit.edu/pub/p6isyf0g">HDSR paper</a>
                             <a type="button" class="btn btn-info" style="margin-bottom: 30px;" href="/assets/blog">blog
                                 post</a>
                         </div>
