Retiring interactive visualizations

--- a/_includes/01_visualizations.html
+++ b/_includes/01_visualizations.html
@@ -4,32 +4,33 @@
 <!--  <iframe src="results/deaths.html" frameborder="0" allowfullscreen="true" width="100%" height="800"> </iframe>-->
 <!--</figure>-->
 
-<p style="text-align: center"> Google sheets with our daily updated predictions: </p>
+<!-- <p style="text-align: center"> Google sheets with our daily updated predictions: </p>
 <div align="center"><a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;"
                href="https://docs.google.com/spreadsheets/d/1ZSG7o4cV-G0Zg3wlgJpB2Zvg-vEN1i_76n2I-djL0Dk/edit#gid=1510898570">County-level
 gsheet</a>
 <a type="button" class="btn btn-success" style="margin-bottom: 30px;"
 href="https://docs.google.com/spreadsheets/d/1ZLev2pRIPXvP-qNnvAtO53-bCrAGTAhB_w0w7bZKAWw/edit#gid=582592389">Hospital-level
-gsheet</a></div>
+gsheet</a></div> -->
 
 <div class="grid-2-columns" style="margin-top: 20px">
     <div>
-        <a href="https://hospitals.covidseverity.com/" target="_blank"><img src="assets/predictions_example.png" style="width: 100%;"></a>
-        <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="https://hospitals.covidseverity.com/" target="_blank">Get predictions for your own data</a>
+        <!-- <a href="https://hospitals.covidseverity.com/" target="_blank"><img src="assets/predictions_example.png" style="width: 100%;"></a> -->
+        <img src="assets/predictions_example.png" style="width: 100%;">
+        <!-- <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="https://hospitals.covidseverity.com/" target="_blank">Get predictions for your own data</a> -->
         <p style="margin-right: 5%;">
-        This link provides access to those predictions where hospitals can upload hospitalization data and get 14 day prediction results. The uploaded data will only be temporarily used for prediction and will not be stored in any form.
+        This feature is now archived. Hospitals were able to upload hospitalization data and get 14 day prediction results. The uploaded data was only be temporarily used for prediction and was not be stored in any form.
         </p>
     </div>
     <div>
-        <a href="results/severity_map.html" target="_blank"><img src="results/severity_map.svg" style="width: 100%;"></a>
-        <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="results/severity_map.html" target="_blank">View interactive map in fullscreen</a>
+        <!-- <a href="results/severity_map.html" target="_blank"><img src="results/severity_map.svg" style="width: 100%;"></a> -->
+        <img src="results/severity_map.svg" style="width: 100%;">
+        <!-- <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="results/severity_map.html" target="_blank">View interactive map in fullscreen</a> -->
         
-        <p style="margin-right: 5%;"><strong>COVID pandemic severity index (CPSI)</strong>: this index is designed to help aid the distribution of medical
+        <p style="margin-right: 5%;"><strong>COVID pandemic severity index (CPSI)</strong>: this index was designed to help aid the distribution of medical
             resources to hospitals.
             It takes on three values (<font color="#AC3931">3: High</font>, <font color="#D3787D">2: Medium</font>, <font
-                    color="#6E8E96">1: Low</font>), indicating the severity of the covid-19 outbreak for a hospital on a certain
-            day. It is calculated in three steps (more details <a
-                    href="https://yu-group.github.io/covid19-severity-prediction/results/hospital_index_animated.html">here</a> and <a href="https://docs.google.com/spreadsheets/d/1ZLev2pRIPXvP-qNnvAtO53-bCrAGTAhB_w0w7bZKAWw/edit#gid=582592389">here</a>.)
+                                                                                                                        color="#6E8E96">1: Low</font>), indicating the severity of the covid-19 outbreak for a hospital on a certain
+            day. It was calculated in three steps; the index is no longer updated, but you can find more details <a href="https://yu-group.github.io/covid19-severity-prediction/results/hospital_index_animated.html">here</a> and <a href="https://docs.google.com/spreadsheets/d/1ZLev2pRIPXvP-qNnvAtO53-bCrAGTAhB_w0w7bZKAWw/edit#gid=582592389">here</a>.
         </p>
     </div>
 </div>
