Update description to reflect archived status

--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -31,24 +31,24 @@
                     <div class="col-md-8 col-md-offset-2">
 
                         <p style="margin-top: 30px">
-                            <a href="https://www.stat.berkeley.edu/~yugroup/people.html">The Yu Group </a> at UC
-                            Berkeley Statistics / EECS / CCB is
-                            working to help forecast the severity of the epidemic for individual counties and
-                            hospitals in the US. We develop interpretable models (updated daily) and
-                            curate data to predict the trajectory of COVID-19-related deaths.
-                            This website provides access to those predictions, in the form of interactive
-                            visualizations.
-                            We are collaborating with <a href="https://response4life.org/">Response4Life</a>
+                            Starting in March 2020, <a href="https://www.stat.berkeley.edu/~yugroup/people.html">the Yu Group </a> at UC
+                            Berkeley Statistics / EECS / CCB worked to help forecast the severity of the epidemic for individual counties and
+                            hospitals in the US. We developed interpretable models (updated daily until May 2021) and
+                            curated data to predict the trajectory of COVID-19-related deaths.
+                            This website provides an archive of that project.
+                            We collaborated with <a href="https://response4life.org/">Response4Life</a>
                             to blunt the effect of COVID-19 through the production
                             and appropriate distribution of PPE, medical equipment, and medical personnel to healthcare
                             facilities across the United States.
                         </p>
 
                         <p style="margin-top: 10px">
-                            For hospital level prediction, please go to our<a href="http://hospitals.covidseverity.com">
-                            hospitalization prediction page </a> where one can upload data for a specific hospital
-                            and download prediction results for the given hospital. The uploaded data will only be
-                            temporarily used for prediction and will not be collected.
+                            We also provided hospital-level predictions via a
+                            now-retired website where one could upload data for a
+                            specific hospital and download prediction results
+                            for the given hospital. The uploaded data waqs only
+                            be temporarily used for prediction and was never
+                            collected.
                         </p>
 
                         <div align="center" style="margin-top: 30px">
