--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -36,7 +36,7 @@
                             hospitals in the US. We developed interpretable models (updated daily until May 2021) and
                             curated data to predict the trajectory of COVID-19-related deaths.
                             This website provides an archive of that project.
-                            We collaborated with <a href="https://response4life.org/">Response4Life</a>
+                            We collaborated with <a href="https://github.com/response4life">Response4Life</a>
                             to blunt the effect of COVID-19 through the production
                             and appropriate distribution of PPE, medical equipment, and medical personnel to healthcare
                             facilities across the United States.
